--- a/Frontend/user/map.html
+++ b/Frontend/user/map.html
@@ -32,11 +32,18 @@
                         href="javascript:void(0);"
                         class="icon"
                         onclick="myFunction()"
-                        ><i class="bi bi-list"></i>
+                    >
+                        <i class="bi bi-list"></i>
                     </a>
                 </div>
             </nav>
             <article>
+                <button id="togglePanelButton" onclick="togglePanel()">
+                    <i
+                        id="panelToggleButtonIcon"
+                        class="bi bi-chevron-left"
+                    ></i>
+                </button>
                 <div id="panel">
                     <label for="fname"
                         ><i class="bi bi-compass-fill"></i
@@ -48,10 +55,9 @@
                         list="megalloNevek"
                     />
                     <datalist id="megalloNevek"> </datalist>
-                    <br />
                     <label for="fname"
                         ><i class="bi bi-three-dots-vertical"></i></label
-                    ><br />
+                    >
 
                     <label for="fname"
                         ><i class="bi bi-geo-alt-fill"></i
@@ -70,84 +76,77 @@
                     <label for="date"
                         ><i class="bi bi-calendar-event-fill"></i
                     ></label>
-                    <input type="date" id="date" name="birthday" /><br />
+                    <input type="date" id="date" name="birthday" />
                     <label for="appt"><i class="bi bi-clock-fill"></i></label>
                     <input type="time" id="appt" name="appt" /><br />
-                    <label for="kivetelek">Járműtípusok:</label><br />
+                    <label for="jarmuKivetelek">Járműtípusok:</label><br />
                     <input
                         type="checkbox"
-                        id="vehicle3"
-                        name="vehicle3"
-                        value="Boat"
+                        id="vehicle1"
+                        name="vehicle1"
+                        value="Metro"
                     />
                     <label for="vehicle3">NCART</label><br />
                     <input
                         type="checkbox"
                         id="vehicle2"
                         name="vehicle2"
-                        value="Car"
+                        value="Bus"
                     />
                     <label for="vehicle2">NCBT</label><br />
                     <input
                         type="checkbox"
-                        id="vehicle1"
-                        name="vehicle1"
-                        value="Bike"
+                        id="vehicle3"
+                        name="vehicle3"
+                        value="Trolley"
                     />
                     <label for="vehicle1">NCET</label><br />
-                    <label for="kivetelek">Vonalak:</label><br />
+                    <label for="vonalKivetelek">Vonalak:</label><br />
                     <input
                         type="checkbox"
-                        id="vehicle1"
-                        name="vehicle1"
-                        value="Bike"
+                        id="line1"
+                        name="line1"
+                        value="M1"
                     />
-                    <label for="vehicle1">M1</label><br />
+                    <label for="line1">M1</label><br />
                     <input
                         type="checkbox"
-                        id="vehicle2"
-                        name="vehicle2"
-                        value="Car"
+                        id="line2"
+                        name="line2"
+                        value="M2"
                     />
-                    <label for="vehicle2">M2</label><br />
+                    <label for="line2">M2</label><br />
                     <input
                         type="checkbox"
-                        id="vehicle3"
-                        name="vehicle3"
-                        value="Boat"
+                        id="line3"
+                        name="line3"
+                        value="B1"
                     />
-                    <label for="vehicle3">B1</label><br />
+                    <label for="line3">B1</label><br />
                     <input
                         type="checkbox"
-                        id="vehicle1"
-                        name="vehicle1"
-                        value="Bike"
+                        id="line4"
+                        name="line4"
+                        value="E1"
                     />
-                    <label for="vehicle1">B2</label><br />
+                    <label for="line4">E1</label><br />
                     <input
                         type="checkbox"
-                        id="vehicle2"
-                        name="vehicle2"
-                        value="Car"
+                        id="line5"
+                        name="line5"
+                        value="E2"
                     />
-                    <label for="vehicle2">E1</label><br />
-                    <input
-                        type="checkbox"
-                        id="vehicle3"
-                        name="vehicle3"
-                        value="Boat"
-                    />
-                    <label for="vehicle3">E2</label><br />
+                    <label for="line5">E2</label><br />
                     <input
                         type="submit"
                         value="Tervezés"
+                        id="tervezesGomb"
                         onclick="tervezes()"
                     />
-
-                    <div id="jarat">
+                    <div id="jarat" style="display: none">
                         <table>
                             <tr>
-                                <th>jármű</th>
+                                <th>vonal</th>
                                 <th>honnan</th>
                                 <th>hova</th>
                                 <th>mikor</th>
