--- a/Frontend/user/map.html
+++ b/Frontend/user/map.html
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div id="map">
-                    <img src="images/map1.png" alt="" />
+                    <img draggable="false" src="images/map1.png" alt="" />
                 </div>
             </article>
         </main>
