--- a/Frontend/user/map.html
+++ b/Frontend/user/map.html
@@ -44,7 +44,7 @@
                         class="bi bi-chevron-left"
                     ></i>
                 </button>
-                <div id="panel">
+                <div id="panel" style="left:0px">
                     <label for="fname"
                         ><i class="bi bi-compass-fill"></i
                     ></label>
@@ -155,6 +155,8 @@
                     </div>
                 </div>
                 <div id="map">
+                    <svg id="vonalrajz" height="2000" width="2666" viewBox="0 0 2000 2666.67" xmlns="http://www.w3.org/2000/svg">
+                    </svg>
                     <img draggable="false" src="images/map1.png" alt="" />
                 </div>
             </article>
