bevezeto oldal footer fix es kepgaleria info

--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -501,19 +501,19 @@
                                     <div id="sliderHey" class="slider">
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/wats.png"
+                                                src="images/hey.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/wats2.png"
+                                                src="images/hey2.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/wats3.png"
+                                                src="images/hey3.png"
                                                 style="width: 100%"
                                             />
                                         </div>
@@ -604,19 +604,19 @@
                                     <div id="sliderWest" class="slider">
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/center.png"
+                                                src="images/west1.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/dog.png"
+                                                src="images/west2.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/heywood.png"
+                                                src="images/jap.png"
                                                 style="width: 100%"
                                             />
                                         </div>
@@ -704,19 +704,19 @@
                                     <div id="sliderSanto" class="slider">
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/center.png"
+                                                src="images/santo1.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/dog.png"
+                                                src="images/santo2.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/heywood.png"
+                                                src="images/santo3.png"
                                                 style="width: 100%"
                                             />
                                         </div>
@@ -800,19 +800,19 @@
                                     <div id="sliderPacific" class="slider">
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/center.png"
+                                                src="images/pac1.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/dog.png"
+                                                src="images/pac2.png"
                                                 style="width: 100%"
                                             />
                                         </div>
                                         <div class="mySlides fade">
                                             <img
-                                                src="images/heywood.png"
+                                                src="images/pac3.png"
                                                 style="width: 100%"
                                             />
                                         </div>
@@ -1078,16 +1078,21 @@
                 </div>
             </article>
             <footer>
-                <a href="https://www.cdprojektred.com/en"><img src="images/cd.png" alt=""></a>
+                <a href="https://www.cdprojektred.com/en"
+                    ><img src="images/cd.png" alt=""
+                /></a>
                 <p>
                     © 2024 CD PROJEKT S.A. Minden jog fenntartva. A CD PROJEKT,
                     a CD PROJEKT logó, a Cyberpunk, a Cyberpunk 2077 és a
                     Cyberpunk 2077 logó a CD PROJEKT S.A. védjegyei és/vagy
                     bejegyzett védjegyei az Egyesült Államokban és/vagy más
-                    országokban. Fan-made weboldal készítői: Veress Marcell,
-                    Keresztes Hunor, Nguyen Duc Duy
+                    országokban. <br />
+                    Fan-made weboldal készítői: Veress Marcell, Keresztes Hunor,
+                    Nguyen Duc Duy
                 </p>
-                <a href="https://www.cdprojektred.com/en"><img src="images/cd.png" alt=""></a>
+                <a href="https://www.cdprojektred.com/en"
+                    ><img src="images/cd.png" alt=""
+                /></a>
             </footer>
         </main>
     </body>
